tests/invalid/runtime/list_sort_type_error.pts
function main() : void {
    map<string, int> m = {"a": 1};
    list<map<string, int> > xs = [m];
    xs.sort();
}
